# rtl-sdr

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  README  configure.ac  librtlsdr.pc.in  rtl-sdr.rules
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
cmake/: rtlsdrConfig.cmake
cmake/Modules/: FindLibUSB.cmake  Version.cmake
contrib/: jenkins.sh
debian/: README.Debian  changelog  control  copyright  copyright-scan-patterns.yml  heatmap.py  librtlsdr-dev.acc  librtlsdr-dev.install  librtlsdr0.dirs  librtlsdr0.install  librtlsdr0.maintscript  librtlsdr0.metainfo.xml  librtlsdr0.udev  rtl-sdr-blacklist.conf  rtl-sdr.examples  rtl-sdr.manpages  rtl_adsb.1  rtl_eeprom.1  rtl_fm.1  rtl_power.1  rtl_sdr.1  rtl_tcp.1  rtl_test.1  rules  watch
include/: Makefile.am  rtl-sdr.h  rtlsdr_i2c.h  tuner_e4k.h  tuner_r82xx.h  tuner_tua9001.h
src/: CMakeLists.txt  Makefile.am  librtlsdr.c  rtl_adsb.c  rtl_biast.c  rtl_eeprom.c  rtl_fm.c  rtl_power.c  rtl_sdr.c  rtl_tcp.c  rtl_test.c  rtlsdr.rc.in  tuner_e4k.c  tuner_fc0012.c  tuner_fc0013.c  tuner_r820t.c  tuner_r82xx.c  tuner_tua9001.c
src/convenience/: convenience.c  convenience.h
